# QQBotPlugin

./: .gitignore  CMakeLists.txt  readme.md
headers/: base_plugin.h  main_process.h  plugin_build.h
src/: example.cpp
